# NSF-HDR-Challenge

./: .gitignore  CITATION.cff  LICENSE  README.md  cite.bib  pyproject.toml
IHARP/: README.md  nc_to_image.py  train.py
IHARP/submission/: model.py  requirements.txt
a3d3/: README.md  dataset.py  model.py  train_classifier.py
a3d3/submission/: model.py
butterfly/: README.md  dataset.py  download.py  model.py  train.py
butterfly/submission/: model.py  requirements.txt
harp/: data_filter.py  train.py
